# jsonpingpong

./: README.md  pyproject.toml
src/jsonpingpong/: __init__.py
